--- a/code/Python-doc/函数.md
+++ b/code/Python-doc/函数.md
@@ -75,7 +75,23 @@ def test():  # 外部函数
    def test2():  # 内部函数
      print("xxx") # 
      b = 666    # ne
+
+def line_config(content, length):
+    print("-"*(length // 2) + content + "-"*(length // 2))
+    
+    
+ def line_config(content, length):
+     def line():
+      print("-"*(length // 2) + content + "-"*(length // 2))   
+     return line;
+lin1 =  line_config("闭包“,20);
+lin1()
+lin1()
+lin1()
+lin1()
+     
 ```
+
 
 
 
