--- a/code/Python-basics/未命名.ipynb
+++ b/code/Python-basics/未命名.ipynb
@@ -209,11 +209,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "0683e41c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-04-19T06:57:10.593426Z",
+     "start_time": "2023-04-19T06:57:10.589557Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "end_time =  None if True else '2023'\n",
+    "print(end_time)"
+   ]
   },
   {
    "cell_type": "code",
