--- a/code/python-100/基础.ipynb
+++ b/code/python-100/基础.ipynb
@@ -819,10 +819,10 @@
      "evalue": "name 'hi' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[28], line 14\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;66;03m# output: 'hi yasoob'\u001b[39;00m\n\u001b[1;32m     11\u001b[0m \n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m# 如果我们删掉旧的hi函数，看看会发生什么！\u001b[39;00m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mdel\u001b[39;00m hi\n\u001b[0;32m---> 14\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mhi\u001b[49m())\n\u001b[1;32m     15\u001b[0m \u001b[38;5;66;03m#outputs: NameError\u001b[39;00m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;28mprint\u001b[39m(greet())\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'hi' is not defined"
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[28], line 14\u001B[0m\n\u001B[1;32m     10\u001B[0m \u001B[38;5;66;03m# output: 'hi yasoob'\u001B[39;00m\n\u001B[1;32m     11\u001B[0m \n\u001B[1;32m     12\u001B[0m \u001B[38;5;66;03m# 如果我们删掉旧的hi函数，看看会发生什么！\u001B[39;00m\n\u001B[1;32m     13\u001B[0m \u001B[38;5;28;01mdel\u001B[39;00m hi\n\u001B[0;32m---> 14\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[43mhi\u001B[49m())\n\u001B[1;32m     15\u001B[0m \u001B[38;5;66;03m#outputs: NameError\u001B[39;00m\n\u001B[1;32m     17\u001B[0m \u001B[38;5;28mprint\u001B[39m(greet())\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'hi' is not defined"
      ]
     }
    ],
@@ -851,61 +851,195 @@
    "cell_type": "markdown",
    "id": "5c4ba584",
    "metadata": {},
-   "source": [
-    "#### 魔术方法"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e7c12cf9",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-11T01:43:20.508982Z",
+     "start_time": "2023-07-11T01:43:20.501278Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 2, 3)"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 1. __new__ 方法的作用就是定制类的创建过程 但在一般的情况下不需要显式地声明\n",
-    "# 2.__new__ 方法主要是在创建类的实例时所调用的第一个方法，第一个参数是接受类的本身，其余的参数一般都传递给__init__方法；\n",
-    "# 3.__new__ 方法在定制化过程中，必须要返回一个cls的实例，否则新实例的__init__方法就不会执行\n"
+    "a_tuple=1,2,3 # 创建一个元组  默认进行元组打包\n",
+    "a_tuple"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9d66d423",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-11T01:45:25.433388Z",
+     "start_time": "2023-07-11T01:45:25.429682Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1\n",
+      "1 2\n",
+      "2 3\n",
+      "3 4\n",
+      "4 5\n",
+      "5 6\n",
+      "6 7\n",
+      "7 8\n",
+      "8 9\n",
+      "9 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 使用 enumerate 函数 创建自己的索引计数器\n",
+    "a_list=[1,2,3,4,5,6,7,8,9,10]\n",
+    "for index,elem in enumerate(a_list):\n",
+    "    print(index,elem)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "41214427",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-11T01:52:18.874474Z",
+     "start_time": "2023-07-11T01:52:18.869511Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'A': 'blue', 'B': 'red', 'C': 'bold'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "keys_list = ['A', 'B', 'C']\n",
+    "values_list = ['blue', 'red', 'bold']\n",
+    "\n",
+    "#There are 3 ways to convert these two lists into a dictionary\n",
+    "#1- Using Python's zip, dict functionz\n",
+    "dict_method_1 = dict(zip(keys_list, values_list))\n",
+    "\n",
+    "#2- Using the zip function with dictionary comprehensions\n",
+    "dict_method_2 = {key:value for key, value in zip(keys_list, values_list)}\n",
+    "\n",
+    "#3- Using the zip function with a loop\n",
+    "items_tuples = zip(keys_list, values_list) \n",
+    "dict_method_3 = {} \n",
+    "for key, value in items_tuples: \n",
+    "    if key in dict_method_3: \n",
+    "        pass # To avoid repeating keys.\n",
+    "    else: \n",
+    "        dict_method_3[key] = value\n",
+    "\n",
+    "print(dict_method_3)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "b44a65c1",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-11T01:57:43.635984Z",
+     "start_time": "2023-07-11T01:57:43.629100Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 'a', 'h'], [2, 'b', 'e'], [3, 'c', 'y'], [None, None, 'f']]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 将两个或对个列表合并为一个包含列表的列表\n",
+    "# 有 4 个列表 [1,2,3], ['a','b','c'], ['h','e','y'] 和 [4,5, 6]，\n",
+    "# 想为这四个列表创建一个新列表；它将是 [[1,'a','h',4], [2,'b','e',5], [3,'c','y',6]]\n",
+    "\n",
+    "def merge(*args, missing_val = None):\n",
+    "    max_length = max([len(lst) for lst in args])\n",
+    "    print(max_length)\n",
+    "    outList = []\n",
+    "    for i in range(max_length):\n",
+    "          outList.append([args[k][i] if i < len(args[k]) else missing_val for k in range(len(args))])\n",
+    "    return outList\n",
+    "\n",
+    "merge([1,2,3], ['a','b','c'], ['h','e','y','f'])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc3edd12",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6c50aab0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "c5f28f96",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-11T02:28:53.493653Z",
+     "start_time": "2023-07-11T02:28:53.488589Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3609757466.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;36m  Cell \u001B[0;32mIn[11], line 1\u001B[0;36m\u001B[0m\n\u001B[0;31m    class AppConfig\u001B[0m\n\u001B[0m                   ^\u001B[0m\n\u001B[0;31mSyntaxError\u001B[0m\u001B[0;31m:\u001B[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "class AppConfig:\n",
+    "    _instance = None\n",
+    "    def __new__(cls):\n",
+    "        if cls._instance is None:\n",
+    "            inst = super().__new__(cls)\n",
+    "            cls._instance = inst\n",
+    "        return cls._instaance\n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
